fix(www): don't autoplay on mobile devices

--- a/packages/www/src/styles/_global.scss
+++ b/packages/www/src/styles/_global.scss
@@ -31,3 +31,8 @@ a {
   text-decoration-thickness: 0.5px !important;
   text-underline-offset: 2px !important;
 }
+
+.video-js,
+.vjs-poster {
+  background-color: transparent !important;
+}
